# bitSetArray

./: LICENSE  README.md  bitSetArray.cabal  stack.yaml
bench/: Main.hs
src/Data/: BitSetArrayIO.hs  IBitSetArray.hs
src/Data/BitSetArray/: Util.hs
test/: Spec.hs
