name:                bitSetArray
version:             0.1.0.0
synopsis:            High performance Fixed Sized BitSets
description:         See README.md
homepage:            http://github.com/BlairArchibald/bitArray#readme
license:             MIT
license-file:        LICENSE
author:              Blair Archibald
maintainer:          mrblairarchibald@gmail.com
copyright:           2016 (C) Blair Archibald
category:            Data Structures
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.BitSetArrayIO
  build-depends:       base   >= 4.7  && < 5
                     , array  >= 0.5  && < 0.6
                     , cereal >= 0.4  && < 0.6
                     , deepseq >= 1.4 && < 1.5
  default-language:    Haskell2010
  ghc-options:         -O2

executable bitSetArray-bench
  hs-source-dirs:      bench
  main-is:             Main.hs 
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , bitSetArray
                     , array
                     , criterion
                     , containers
  default-language:    Haskell2010

test-suite bitSetArray-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , array
                     , bitSetArray
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/BlairArchibald/bitSetArray
